--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,3 +34,5 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build-and-test
+orbs:
+  snyk: snyk/snyk@1.1.1
